[package]
name = "example-sqlx-postgres"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.9"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "uuid"] }
rstest = "0.23.0"
serde_json = "1.0.133"
tower-http = {version = "0.6.2", features = ["trace"]}
tower = {version = "0.5.2"}
http-body-util = "0.1.2"
